--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,4 +2,16 @@
   background-color: #3498db;
   color: white;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 3em;
+}
+
+p {
+  font-size: 0.95em;
 }
