--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,30 @@
 .container {
-  background-color: #3498db;
-  color: white;
+  display: flex;
   height: 100vh;
+  width: 100vw;
+}
+
+.left-container,
+.right-container {
+  flex: 1;
+}
+
+.left-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.left-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.right-container {
+  background-color: #34495e;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,8 +33,4 @@
 
 h1 {
   font-size: 3em;
-}
-
-p {
-  font-size: 0.95em;
 }
