--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
 <main class="container">
-  <h1>Tennis Ace</h1>
-  <p>Find a tennis pal within NY!</p>
+  <div class="left-container">
+    <img src="tennis-ace-banner.jpg" alt="Tennis Image" />
+  </div>
+  <div class="right-container">
+    <h1>Tennis Ace</h1>
+    <p>Find a tennis buddy within New York City!</p>
+  </div>
 </main>
