--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,5 +5,9 @@
   <div class="right-container">
     <h1>Tennis Ace</h1>
     <p>Find a tennis buddy within New York City!</p>
+    <div>
+      <button mat-raised-button>Login</button>
+      <button mat-raised-button>Sign Up</button>
+    </div>
   </div>
 </main>
