feat: add div for buttons with new class attribute of button-container

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="right-container">
     <h1>Tennis Ace</h1>
     <p>Find a tennis buddy within New York City!</p>
-    <div>
+    <div class="button-container">
       <button mat-raised-button>Login</button>
       <button mat-raised-button>Sign Up</button>
     </div>
