--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,5 @@
 <main class="container">
-  <div class="left-container">
-    <img src="tennis-ace-banner.jpg" alt="Tennis Image" />
-  </div>
+  <app-hero />
   <div class="right-container">
     <h1>Tennis Ace</h1>
     <p>Find a tennis buddy within New York City!</p>
