--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,9 @@
+/* .container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+} */
+
 .container {
   display: flex;
   height: 100vh;
@@ -9,18 +15,18 @@
   flex: 1;
 }
 
-.left-container {
+/* .left-container {
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-}
+} */
 
-.left-container img {
+/* .left-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .right-container {
   background-color: #34495e;
