--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,4 @@
 <main class="container">
   <app-hero />
-  <div class="right-container">
-    <h1>Tennis Ace</h1>
-    <p>Find a tennis buddy within New York City!</p>
-    <div class="button-container">
-      <button mat-raised-button>Login</button>
-      <button mat-raised-button>Sign Up</button>
-    </div>
-  </div>
+  <app-calltoaction />
 </main>
