--- a/src/app/home/ui/login-form/login-form.component.css
+++ b/src/app/home/ui/login-form/login-form.component.css
@@ -2,23 +2,82 @@
   display: flex;
   height: 100vh;
   width: 40vw;
-}
-.right-container {
+  flex: 1;
   background-color: #34495e;
   color: white;
-  display: flex;
-  flex: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.button-container {
-  display: flex;
-  margin-top: 1.5em;
-  gap: 1em;
+h1 {
+  text-align: center;
+  font-size: 3em;
 }
 
-h1 {
-  font-size: 3em;
+p {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.form {
+  max-width: 300px;
+  width: 100%;
+}
+
+.form label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.form label:last-of-type {
+  margin-top: 20px;
+}
+
+.form input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #3caaf2;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.form button:hover {
+  background-color: #038ae1;
+}
+
+.form button:disabled {
+  background-color: #77c5f7;
+  color: white;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
+.signup-message {
+  font-size: 12px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.invalid-message {
+  margin-top: 7px;
+  padding-left: 2px;
+  font-size: 11px;
+  color: #77c5f7;
+  text-align: left;
 }
