--- a/src/app/home/ui/login-form/login-form.component.css
+++ b/src/app/home/ui/login-form/login-form.component.css
@@ -50,6 +50,7 @@ h3 {
 .form button {
   width: 100%;
   padding: 10px;
+  margin-top: 20px;
   background-color: #3caaf2;
   color: white;
   border: none;
@@ -76,6 +77,7 @@ h3 {
 
 .invalid-message {
   margin-top: 7px;
+  margin-bottom: 0px;
   padding-left: 2px;
   font-size: 11px;
   color: #77c5f7;
