feat: add app name, sub title and sign up name

--- a/src/app/signup/ui/signup-form/signup-form.component.html
+++ b/src/app/signup/ui/signup-form/signup-form.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="right-side">
+    <h1>Tennis Ace</h1>
+    <p>Find a tennis buddy in NYC!</p>
+    <h3>Sign Up</h3>
     <div class="form">
-      <h2>Sign Up</h2>
-
       <form [formGroup]="signupForm" (ngSubmit)="emitData()">
         <label for="firstName">First Name</label>
         <input
