--- a/src/app/login/ui/login-form/login-form.component.html
+++ b/src/app/login/ui/login-form/login-form.component.html
@@ -38,9 +38,8 @@
         <button type="submit">Login</button>
       </form>
       <p class="signup-message">
-        Don't have an account?<a routerLink="/signup"
-          ><strong> Sign up.</strong></a
-        >
+        Don't have an account?
+        <a routerLink="/signup"><strong>Sign up.</strong></a>
       </p>
     </div>
   </div>
