--- a/src/app/login/ui/login-form/login-form.component.css
+++ b/src/app/login/ui/login-form/login-form.component.css
@@ -83,3 +83,16 @@ h3 {
   color: #77c5f7;
   text-align: left;
 }
+
+a[routerLink] {
+  text-decoration: none;
+  color: inherit;
+}
+
+a[routerLink]:visited {
+  text-decoration: none;
+}
+
+a[routerLink]:hover {
+  text-decoration: underline;
+}
