feat: update routerlink to /home

--- a/src/app/signup/ui/signup-form/signup-form.component.html
+++ b/src/app/signup/ui/signup-form/signup-form.component.html
@@ -75,7 +75,8 @@
       </form>
 
       <p class="signup-message">
-        Already joined?<a routerLink="/login"><strong> Sign In.</strong></a>
+        Already joined?
+        <a routerLink="/home"><strong>Sign In.</strong></a>
       </p>
     </div>
   </div>
